static/global.css
html, body {
	--theme-color-main: #A1FA57;
	--theme-color-outline: #5BDB4D;

	--theme-color-accent-top: #61F27E;
	--theme-color-accent-mid: #4DDB92;
	--theme-color-accent-low: #57FAD4;

	--theme-font-main: #000;
	--theme-font-gray: #5e5e5e;

	font-family: sans-serif;

	margin: 0px;
}

.center {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
}

.w-wide {
	width: 90%;
	max-width: 400px;
}

.button {
	display: flex;
	align-items: center;
	justify-content: center;

	height: 45px;
	border-radius: 6px;

	background-color: var(--theme-color-main);

	box-shadow: 0px 4px 4px var(--theme-color-accent-mid);

	user-select: none;
	-webkit-user-select: none;

	margin-bottom: 6px;
}

.button:hover {
	background-color: var(--theme-color-accent-top);
}

.button:active {
	background-color: var(--theme-color-accent-low);
}

.button span {
	width: 100%;
	text-align: center;
	user-select: none;
	-webkit-user-select: none;
}

input {
	height: 30px;
	border-radius: 6px;
	border-color: var(--theme-color-accent-mid);
	border-style: solid;

	box-shadow: 0px 4px 4px var(--theme-color-accent-mid);

	font-size: medium;

	padding: 6px;
}

textarea {
	border-radius: 6px;
	border-color: var(--theme-color-accent-mid);
	border-style: solid;

	box-shadow: 0px 4px 4px var(--theme-color-accent-mid);

	font-size: medium;

	padding: 6px;
}

.gray {
	color: var(--theme-font-gray);
}

.center-control {
	display: flex;
	flex-direction: column;
	align-items: center;

	max-width: 400px;
	width: 100%;
	height: 100%;

	bottom: 0px;

	position: absolute;

	justify-content: center;
}



.bi-chevron-left {
	position: fixed;
	top: 0px;
	left: 0px;
	margin: 5px;
	height: 30px;
	width: 30px;
}

.bi {
	--icon-size: 20px;
	min-width: var(--icon-size);
	min-height: var(--icon-size);
}

